complete migration to the new workflow structure